--- a/Task.ipynb
+++ b/Task.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Import all the relevant libraries"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -37,24 +29,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This is a function I created to create your bins and points data\n",
+    "\n",
     "def createDataSets(data):\n",
+    "    #The following 2 lines convert the Latitude and Longitude into geometric points and give it a coordinate system.\n",
+    "    #The gdf variable is basically a variable that creates a geometric dataset\n",
     "    gdf = gpd.GeoDataFrame(data, geometry=gpd.points_from_xy(data.Longitude, data.Latitude))    \n",
     "    gdf.set_crs('epsg:4326', inplace=True)\n",
     "\n",
+    "    #These 2 lines convert the Latitude and Longitude columns to numeric values\n",
     "    gdf['Latitude'] = pd.to_numeric(gdf['Latitude'], errors='coerce')\n",
     "    gdf['Longitude'] = pd.to_numeric(gdf['Longitude'], errors='coerce')\n",
     "\n",
+    "    #Here I create a new column which calculates the mean of latitude and longitude for each row\n",
     "    gdf['mean_lat_long'] = gdf[['Latitude', 'Longitude']].mean(axis=1)\n",
     "    \n",
+    "    #Drop any null or empty values of Latitude or Longitude in the dataset\n",
     "    gdf = gdf.dropna(subset=['Longitude', 'Latitude'])\n",
     "\n",
+    "    #The data you provided had a value above 100,000 so I put a condition to only filter records that have lat and long values under 10\n",
     "    gdf = gdf.query('Latitude <= 10 & Longitude <= 10')\n",
     "\n",
+    "    #Here I got the bounds of the dataset\n",
     "    min_x, min_y, max_x, max_y = gdf.total_bounds\n",
     "\n",
+    "    #Here I define the size of each bin\n",
     "    length = 0.25\n",
     "    wide = 0.25\n",
     "\n",
+    "    #Here onwards I create the bins and store it in the polygons variable\n",
     "    cols = list(np.arange(min_x, max_x + wide, wide))\n",
     "    rows = list(np.arange(min_y, max_y + length, length))\n",
     "\n",
@@ -63,14 +66,20 @@
     "        for y in rows[:-1]:\n",
     "            polygons.append(Polygon([(x,y), (x+wide, y), (x+wide, y+length), (x, y+length)]))\n",
     "\n",
+    "    #I convert the bin polygons into geometric dataset and give it a coordinate system\n",
     "    grid = gpd.GeoDataFrame({'geometry':polygons}).set_crs('epsg:4326', inplace=True)\n",
     "    \n",
+    "    #I add a new ID column to assign IDs to each bin \n",
     "    grid['ID'] = range(1, grid.shape[0]+1)\n",
     "    grid = grid[['ID'] + [col for col in grid.columns if col != 'ID']]\n",
     "\n",
+    "    #Here I basically assign the bins to each point and create a new column for Bin_ID. So if Point A belongs to Bin 1, then Point A will have Bin_ID = 1 showing that\n",
+    "    #this point belongs to Bin 1\n",
     "    gdf = gpd.overlay(grid, gdf, how='intersection', keep_geom_type=False)\n",
     "    gdf = gdf.rename(columns={'ID': 'Bin_ID'})\n",
-    "    \n",
+    "\n",
+    "    #Over here, the same thing is being done but the other way around. Here in the bins dataset, we are creating a count column which shows how many points each bin has\n",
+    "    #We are also creating a column for aggregated values which basically is the aggregated value of all the mean_lat_long values of points inside the bin\n",
     "    merged = gpd.sjoin(grid, gdf, how=\"right\", predicate='intersects')\n",
     "    aggregated_values = merged.groupby('ID')['mean_lat_long'].mean().reset_index(name='aggregated_values')\n",
     "    merged = merged.groupby('ID').size().reset_index(name='count')\n",
@@ -87,6 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#A function to plot the points and bins data\n",
     "def plotData(gdf, grid):\n",
     "    gdf.plot(ax=grid.plot(linewidth=1, edgecolor='black',alpha=0.5), marker='o', markersize=5, color='red')\n",
     "    plt.title(\"My Data and Grid\")\n",
@@ -113,12 +123,15 @@
     }
    ],
    "source": [
+    "#Now we first load our file and convert the date into a datetime format\n",
     "data = gpd.read_file('Book1.csv')\n",
     "data['Date'] = pd.to_datetime(data['Date'])\n",
     "\n",
+    "#In the following two lines, we once again remove any empty values in the dataset\n",
     "data.replace('',np.nan,inplace=True)\n",
     "data = data.dropna(subset=['Latitude', 'Longitude'])\n",
     "\n",
+    "#Use the function above to create the bins and points and then use the plot function to plot the data\n",
     "gdf, grid = createDataSets(data)\n",
     "\n",
     "plotData(gdf, grid)"
@@ -152,15 +165,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#So first I copied the points data into another variable because I don't want to touch it unnecessarily\n",
     "test = gdf.copy()\n",
     "\n",
+    "#Here I split the date into month, day and dayofweek\n",
     "test['month'] = test['Date'].dt.month\n",
     "test['day'] = test['Date'].dt.day\n",
     "test['dayofweek'] = test['Date'].dt.dayofweek\n",
     "\n",
+    "#And now I split the data into X and y variables which are basically the input and target variables to be used in our model\n",
     "X = test[['month', 'day', 'dayofweek']]\n",
     "y = test[['Latitude', 'Longitude']]\n",
     "\n",
+    "#In the following few lines, I am augmenting the data which means to create artificial data from the existing data. This helps to improve the performance of the model\n",
     "X_augmented = X.copy()\n",
     "y_augmented = y.copy()\n",
     "\n",
@@ -174,8 +191,10 @@
     "X_augmented = pd.concat([X, X_augmented], axis=0)\n",
     "y_augmented = pd.concat([y, y_augmented], axis=0)\n",
     "\n",
+    "#Here I divide the data into training and test variables. 5% of the data is used as test data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_augmented, y_augmented, test_size=0.05, random_state=12)\n",
     "\n",
+    "#Some functions to normalize the data before we feed it into the model\n",
     "scaler_x = MinMaxScaler()\n",
     "scaler_y = MinMaxScaler()\n",
     "X_train = scaler_x.fit_transform(X_train)\n",
@@ -193,6 +212,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#The following commented code is a simple way to train the model\n",
+    "# model = Sequential()\n",
+    "# model.add(LSTM(53, input_shape=(X_train.shape[1], X_train.shape[2]), return_sequences=True))\n",
+    "# model.add(LSTM(95, return_sequences=True,))\n",
+    "# model.add(LSTM(95))\n",
+    "# model.add(Dense(2))\n",
+    "# model.compile(loss='mse', optimizer='rmsprop')\n",
+    "\n",
+    "# model.fit(X_train, y_train, epochs=50, batch_size=32, validation_data=(X_test, y_test), verbose=2)\n",
+    "\n",
+    "\n",
+    "#But we will use this way. This method basically figures out the appropaite parameters to train the model with. This is known as hyperparameter tuning\n",
+    "#It is a pretty long and heavy process\n",
     "def create_model(lstm1_neurons=53, lstm2_neurons=95, lstm3_neurons=95, optimizer='rmsprop'):\n",
     "    model = Sequential()\n",
     "    model.add(LSTM(lstm1_neurons, input_shape=(X_train.shape[1], X_train.shape[2]), return_sequences=True))\n",
@@ -200,7 +232,17 @@
     "    model.add(LSTM(lstm3_neurons))\n",
     "    model.add(Dense(2))\n",
     "    model.compile(loss='mse', optimizer=optimizer)\n",
-    "    return model"
+    "    return model\n",
+    "\n",
+    "#The following piece of code is to be commented out if you want to do this process of hyperparameter tuning\n",
+    "# model = KerasRegressor(build_fn=create_model, verbose=2)\n",
+    "\n",
+    "# param_grid = dict(lstm1_neurons=[53], lstm2_neurons=[95], lstm3_neurons=[95], optimizer=['rmsprop'])\n",
+    "\n",
+    "# random_search = RandomizedSearchCV(estimator=model, param_distributions=param_grid, n_iter=25, n_jobs=-1, cv=10, verbose=2)\n",
+    "# random_search_result = random_search.fit(X_train, y_train)\n",
+    "\n",
+    "# print(\"Best: %f using %s\" % (random_search_result.best_score_, random_search_result.best_params_))\n"
    ]
   },
   {
@@ -274,6 +316,8 @@
     }
    ],
    "source": [
+    "#Now the hyperparameter tuning code that I commented out is because I already trained 3 models.\n",
+    "#Here I am loading those 3 models but not all at the same time. Uncomment the line for the model you would like to load and comment the other line.\n",
     "random_search = joblib.load('models/model.pkl')"
    ]
   },
@@ -295,6 +339,7 @@
     }
    ],
    "source": [
+    "#This piece of code predicts and then checks the performance of the model\n",
     "y_pred = random_search.predict(X_test)\n",
     "\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -339,6 +384,7 @@
     }
    ],
    "source": [
+    "#Here I am plotting the actual vs predicted values\n",
     "predicted_latitude = y_pred[:,0]\n",
     "actual_latitude = y_test[:,0]\n",
     "predicted_longitude = y_pred[:,1]\n",
@@ -371,6 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#I created this function to predict new points using the model that we created above\n",
     "def predictNewPoint(new_date, data):\n",
     "    new_date = pd.to_datetime(new_date)\n",
     "\n",
@@ -415,11 +462,72 @@
     }
    ],
    "source": [
+    "#Here we predict the new points by passing the date in and our original data variable\n",
     "new_entry = predictNewPoint('15-08-26', data)\n",
     "\n",
+    "#We then update our original dataset\n",
     "data = pd.concat([data, new_entry], axis=0)\n",
     "\n",
+    "#And finally we create an updated set of bins and points\n",
     "new_gdf, new_grid = createDataSets(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4812</th>\n",
+       "      <td>2026-08-15</td>\n",
+       "      <td>5.197598</td>\n",
+       "      <td>6.425815</td>\n",
+       "      <td>POINT (6.42581 5.19760)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Latitude  Longitude                 geometry\n",
+       "4812 2026-08-15  5.197598   6.425815  POINT (6.42581 5.19760)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_entry"
    ]
   }
  ],
@@ -439,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
